[package]
name = "procmod-overlay"
version = "1.0.0"
edition = "2021"
description = "Game overlay rendering with transparent click-through windows"
license = "MIT"
repository = "https://github.com/procmod/overlay"
keywords = ["overlay", "game", "modding", "directx", "rendering"]
categories = ["game-development", "rendering", "graphics"]

[dependencies]
thiserror = "2"
fontdue = "0.9"

[dev-dependencies]
png = "0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
